# mcp-feather-code

./: .env.example  .gitignore  .mcp.json.example  LICENSE  README.md  feather_code.py  install.bat  install.sh  pyproject.toml  requirements.txt
